remove base64 class